--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="stylesheet.css">
+    
     <script src="jsQR.js"></script>
     <script src="https://kit.fontawesome.com/91acd3a3b5.js" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
@@ -14,6 +16,7 @@
   </head>
 
   <body>
+    <script type="text/javascript" src="main.js"></script>
     <nav class="navbar navbar-light" style="background-color: #DBF1EF;">
       <a class="navbar-brand" href="#">
         <img src="http://drive.google.com/uc?export=view&id=1XVLaXKM_hKd3LE5MEikuKEbhxqmhvmIS" width="35" height="35" class="d-inline-block align-top" alt="" style="margin:15px;">
